--- a/tools/data_processer/config/mmdet3d_pp_val_3class.yaml
+++ b/tools/data_processer/config/mmdet3d_pp_val_3class.yaml
@@ -5,5 +5,5 @@ gt_path: ./waymo/waymo_format/validation_new/gt
 target_path: ../../datasets/mmdet3d_pp_3class
 mode: val
 expand_proposal_meter: 3
-
+nframe: 1
 
