--- a/tools/data_processer/config/mmdet3d_pp_train_3class.yaml
+++ b/tools/data_processer/config/mmdet3d_pp_train_3class.yaml
@@ -5,5 +5,6 @@ gt_path: ./waymo/waymo_format/training_new/gt
 target_path: ../../datasets/mmdet3d_pp_3class
 mode: train
 expand_proposal_meter: 3
+nframe: 1
 
 
